# atp-checkers

./: .gitignore  AGENTS.md  LICENSE  LIMITATIONS.md  Main.lean  README.md  RELEASE_PLAN.md  install.sh  lake-manifest.json  lakefile.lean  llm.txt  pyproject.toml
.claude/: settings.local.json
.github/workflows/: lean.yml
annotations/semantic_lean_errors/: README.md  error_tags.md  eval_prompts_fewshot.md  ground_truth_schema.md  semantic_lean_errors.json  semantic_lean_errors.jsonl
annotations/static_warning_verification/: README.md  prompt_template.md  schema.md  static_warning_verification_55.json  static_warning_verification_55.jsonl
datasets/: FORMATS.md  README.md
datasets/examples/: minimal.jsonl  minimal_no_mathlib.jsonl
results/combibench@hf/: results.jsonl  run.json  summary.json
results/formalmath@all/: run.json  summary.json
results/formalmath@lite/: results.jsonl  run.json  summary.json
results/minif2f@ai-mo-test/: results.jsonl  run.json  summary.json
results/minif2f@harmonic/: results.jsonl  run.json  summary.json
results/minif2f@justincasher/: results.jsonl  run.json  summary.json
results/minif2f@v2c/: results.jsonl  run.json  summary.json
results/minif2f@v2s/: results.jsonl  run.json  summary.json
results/minif2f@yangky11/: results.jsonl  run.json  summary.json
results/minif2f@yangky11-early/: results.jsonl  run.json  summary.json
results/minif2f@yangky11-early-normalized/: results.jsonl  run.json  summary.json
results/proofnet@deepseek-port/: results.jsonl  run.json  summary.json
results/proofnet@sharp/: results.jsonl  run.json  summary.json
results/proverbenchmath@deepseek/: results.jsonl  run.json  summary.json
results_experimental/: README.md
runner/: __init__.py  __main__.py  data_loader.py  executor.py  loader.py  models.py  parse.py  persistent.py  preamble.py
runner_tests/: data_loading_test.py  test_e2e.py  test_executor.py  test_loader.py  test_main.py  test_persistent.py
src/: AtpLinter.lean
src/AtpLinter/: AnalyticDomain.lean  AxiomChecker.lean  Basic.lean  CastAfterTruncation.lean  Counterexample.lean  DivisionByZero.lean  ExponentTruncation.lean  GuardFacts.lean  GuardPolicy.lean  GuardProver.lean  IntDivTruncation.lean  IntToNat.lean  ListRange.lean  ModuloByZero.lean  NatSubtraction.lean  SemanticGuards.lean  UnusedBinder.lean  VacuousCheck.lean
test/: AdvancedCheckerTests.lean  AllTests.lean  ArithmeticSemanticsTests.lean  CoverageTests.lean  DemoTests.lean  Examples.lean  GuardProvingTests.lean  IntegrationTests.lean  PrefixScopeTests.lean  RealProblem.lean  RegressionTests.lean  SimpleExamples.lean  StructuralCheckerTests.lean  TestAssertions.lean
